2008-06-12  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-crawler.c: Change all instances of
	g_strfreev() on dynamically allocated GPtrArrays, since they grow,
	the strings should be freed separately and the array itself after
	that, this is also better than g_strfreev() in case one or the
	other changes to a GSlice implementation.
	
	* src/trackerd/tracker-main.c: 
	* src/trackerd/tracker-monitor.[ch]: Pass the TrackerConfig since
	we need it to know if we shouldn't monitor certain locations.

2008-06-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* svn merge -r 1538:1656 ../xesam-support
 
2008-06-12  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/trackerd/tracker-xesam-test.c:
	* tests/trackerd/Makefile.am:
	* tests/Makefile.am:
	* configure.ac:

	Added unit test infrastructure for Xesam

2008-06-12  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.c: Always initialise the hash
	tables to avoid errors when we can't contact the HAL DBus service.
	
	* src/trackerd/linux-inotify-syscalls.h: Removed now we don't need
	it thanks to the GIO file monitoring.
	
	* src/trackerd/tracker-crawler.c: Get the locations to crawl from
	the config now and add a default of $HOME. Also added function to
	check that we don't crawl the same location more than once and
	added more locations to the ignore list.
	
	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-email-kmail.c:
	* src/trackerd/tracker-process-files.c: Removed the need for the
	TrackerDBInterface when adding or removing monitors.

	* src/trackerd/tracker-main.c: Added back the initial_sleep
	command line argument so we can at least inspect the startup
	details and logging before the console is spammed with file
	crawling information.
	
	* src/trackerd/tracker-monitor.[ch]: Implemented the basics of
	file monitoring here using the new GFileMonitor API.

2008-06-12  Ivan Frade  <ivan.frade@nokia.com>
